# p73_cc

./: .gitignore  CMakeLists.txt  README.md  package.xml
actuator_nets/: p73_left_ankle_pitch.pt  p73_left_ankle_roll.pt  p73_left_hip_pitch.pt  p73_left_hip_roll.pt  p73_left_hip_yaw.pt  p73_left_knee_pitch.pt  p73_right_ankle_pitch.pt  p73_right_ankle_roll.pt  p73_right_hip_pitch.pt  p73_right_hip_roll.pt  p73_right_hip_yaw.pt  p73_right_knee_pitch.pt
include/: cc.h
logs/: .gitignore  PLOT_USAGE.md  plot_log.py  realrobot_26xxxx.py
policy/: policy(260327).onnx  policy260331.onnx
scripts/: analyze_log.py  convert_actuator_nets.py  export_full_policy.py  walker_teleop.py
src/: cc.cpp
