<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p73_cc</name>
  <version>0.0.1</version>
  <description>Walker Custom Controller - ONNX RL Policy Execution for P73 Walker Robot</description>

  <maintainer email="piene@todo.todo">piene</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>p73_lib</depend>
  <depend>p73_msgs</depend>
  <depend>br_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
